<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_grey"
    tools:context=".ui.view.settings.SettingsFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:buttonGravity="center_vertical"
        android:background="@color/white"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_theme_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:background="@drawable/bg_item"
        android:padding="15dp"
        android:elevation="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        >
        <TextView
            android:id="@+id/tv_theme_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsTheme"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tv_theme_explains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/themeExplains"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_theme_mode"
            app:layout_constraintStart_toStartOf="parent"
            />


        <RadioGroup
            android:id="@+id/rg_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_theme_explains"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"

            >
            <RadioButton
                android:id="@+id/rb_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyRadioButton"
                android:textColor="@color/text_grey"
                android:text="@string/defaultMode" />
            <RadioButton
                android:id="@+id/rb_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyRadioButton"
                android:textColor="@color/text_grey"
                android:text="@string/lightMode" />

            <RadioButton
                android:id="@+id/rb_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyRadioButton"
                android:textColor="@color/text_grey"
                android:text="@string/darkMode" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_leaf_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl_theme_mode"
        android:background="@drawable/bg_item"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:elevation="1dp"
        >
        <TextView
            android:id="@+id/tv_leaf_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsTimeLeaf"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/tv_leaf_explains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leafExplains"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_leaf_time"
            />

        <RadioGroup
            android:id="@+id/rg_leaf_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_leaf_explains"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <RadioButton
                android:id="@+id/rb_leaf_time_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyRadioButton"
                android:text="@string/onesec"
                android:textColor="@color/text_grey"/>
            <RadioButton
                android:id="@+id/rb_leaf_time_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyRadioButton"
                android:text="@string/threesec"
                android:textColor="@color/text_grey"/>

            <RadioButton
                android:id="@+id/rb_leaf_time_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyRadioButton"
                android:text="@string/fivesec"
                android:textColor="@color/text_grey"
                />
            <RadioButton
                android:id="@+id/rb_leaf_time_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyRadioButton"
                android:text="@string/sevensec"
                android:textColor="@color/text_grey"
                />
            <RadioButton
                android:id="@+id/rb_leaf_time_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyRadioButton"
                android:text="@string/tensec"
                android:textColor="@color/text_grey"
                />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_vibration_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl_leaf_mode"
        android:background="@drawable/bg_item"
        android:padding="15dp"
        android:elevation="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        >
        <TextView
            android:id="@+id/tv_vibration_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibration"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/tv_vibration_options_explains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibrationOptionsExplains"
            android:maxLines="2"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_vibration_options"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_vibration_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setVibration"
            android:checked="true"
            android:track="@drawable/switch_track_selector"
            android:thumb="@drawable/switch_thumb_selector"
            app:layout_constraintTop_toBottomOf="@id/tv_vibration_options_explains"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="280dp" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_show_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl_vibration_options"
        android:background="@drawable/bg_item"
        android:padding="15dp"
        android:elevation="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        >
        <TextView
            android:id="@+id/tv_show_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appInstructions"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/tv_show_options_explains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appInstructionsExplains"
            android:maxLines="2"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_show_options"
            app:layout_constraintStart_toStartOf="parent"
            />



        <TextView
            android:id="@+id/btn_show_instruction_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/InstructionDialogShowNow"
            app:layout_constraintTop_toBottomOf="@id/tv_show_options_explains"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_show_license"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl_show_options"
        android:background="@drawable/bg_item"
        android:padding="15dp"
        android:elevation="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        >
        <TextView
            android:id="@+id/tv_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/tv_license_explains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appInstructionsExplains"
            android:maxLines="2"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/tv_license"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/btn_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showLicense"
            app:layout_constraintTop_toBottomOf="@id/tv_license_explains"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>