<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/iv"
        android:layout_marginTop="@dimen/dp_70"
        android:background="@drawable/bg_item"
        android:paddingTop="@dimen/dp_40"
        android:paddingBottom="@dimen/dp_10"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        >
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scrollToItem"
            android:gravity="center_horizontal"
            android:textSize="@dimen/sp_25"
            app:layout_constraintBottom_toTopOf="@id/comment"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/scrollComment"
            android:textSize="@dimen/sp_15"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginTop="@dimen/dp_20"
            />

        <LinearLayout
            android:id="@+id/ll_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/comment"
            android:gravity="center"
            >
            <EditText
                android:id="@+id/et_lineNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Last"
                android:inputType="number"
                android:digits="0123456789"
                android:gravity="center"
                android:textSize="@dimen/sp_15"
                android:textColorHint="@color/blue"
                />

            <TextView
                android:id="@+id/addTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moveTo"
                android:gravity="center"
                android:textSize="@dimen/sp_15"
                />
        </LinearLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_move_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/move"
            android:textStyle="bold"
            android:background="@drawable/bg_dialog_btn_selected"
            android:textColor="@color/always_white"
            android:textSize="@dimen/sp_15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
            android:layout_margin="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@id/ll_add"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="1dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancellation"
            android:textStyle="bold"
            android:background="@drawable/bg_dialog_btn_unselected"
            android:textColor="@color/always_white"
            android:textSize="@dimen/sp_15"
            app:layout_constraintStart_toEndOf="@id/btn_move_line"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@id/ll_add"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="1dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv"
        android:layout_width="@dimen/thumbnail"
        android:layout_height="@dimen/thumbnail"
        android:src="@drawable/thumbnails"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>


