<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_70"
        android:background="@drawable/bg_item"
        android:paddingStart="@dimen/dp_10"
        android:paddingTop="@dimen/dp_40"
        android:paddingEnd="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        app:layout_constraintTop_toTopOf="@id/iv">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/DeleteAllWork"
            android:textSize="@dimen/sp_25"
            android:textStyle="bold"
            android:fontFamily="@font/noto_sans_kr_medium_font_family"
            android:includeFontPadding="false"
            app:layout_constraintBottom_toTopOf="@id/comment" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_horizontal"
            android:fontFamily="@font/noto_sans_kr_regular_font_family"
            android:includeFontPadding="false"
            android:text="@string/deleteAllworkComment"
            android:textSize="@dimen/sp_15"
            app:layout_constraintTop_toBottomOf="@id/title" />


        <EditText
            android:id="@+id/et_delete_user_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/deleteComment"
            android:textColorHint="@color/blue"
            android:textSize="@dimen/sp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/noto_sans_kr_regular_font_family"
            android:includeFontPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/comment" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:background="@drawable/bg_dialog_btn_selected"
            android:elevation="1dp"
            android:text="@string/Delete"
            android:textColor="@color/always_white"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold"
            android:fontFamily="@font/noto_sans_kr_medium_font_family"
            android:includeFontPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_delete_user_input" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:background="@drawable/bg_dialog_btn_unselected"
            android:elevation="1dp"
            android:text="@string/cancellation"
            android:textColor="@color/always_white"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold"
            android:fontFamily="@font/noto_sans_kr_medium_font_family"
            android:includeFontPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_delete"
            app:layout_constraintTop_toBottomOf="@id/et_delete_user_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv"
        android:layout_width="@dimen/thumbnail"
        android:layout_height="@dimen/thumbnail"
        android:src="@drawable/thumbnails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>


